--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
             </h2>
 
             <p class="lead">
-              Ryan's research interests span data-driven public policy, fairness and bias in AI, and philosophy. He seeks to apply computing technology to societal advancement.
+              Ryan's research interests span data-driven public policy, fairness and interpretability in AI, and philosophy of mind. He seeks to apply computing technology to social problems.
             </p>
 
             <a href="docs/steed-cv.pdf" class="btn btn-secondary btn-lg" style="margin: 0px auto 10px auto">
