--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#portfolio">Portfolio</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#other-work">Research</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="#portfolio">Portfolio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
@@ -112,6 +112,146 @@
       </div>
     </header>
 
+    <section class="content-section-a" id="about">
+
+      <div class="container">
+
+        <div class="row">
+          <div id="headshot-column" class="col-md-4 ml-auto">
+            <img class="img-fluid headshot" src="img/RyanSteed_Headshot.jpg" alt="">
+          </div>
+          <div class="col-lg-5 mr-auto order-lg-1">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              About
+            </h2>
+            <p class="lead">
+              Ryan Steed is a data scientist, project manager, and student.
+              He is studying Computational Economics at The George Washington University after graduating from the North Carolina School of Science and Mathematics in 2017.
+              He is also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
+            </p>
+            <br>
+            <div>
+              <a href="docs/steed-cv.pdf" class="btn btn-secondary btn-lg">
+                <i class="far fa-file-alt fa-fw"></i>
+                <span class="network-name">Curriculum Vitae</span>
+              </a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+      <!-- /.container -->
+
+    </section>
+
+    <section class="content-section-b" id="other-work">
+
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-9" style="margin: auto auto;">
+            <hr class="section-heading-spacer">
+            <div class="clearfix"></div>
+            <h2 class="section-heading">
+              Research
+            </h2>
+
+            <p class="lead">
+              Ryan's research interests span fairness and interpretability in AI, computational economics, and philosophy of mind. He seeks to apply computing technology to social problems. 
+
+              <br><br>He is advised by <a href="https://www2.seas.gwu.edu/~aylin/">Aylin Caliskan</a>, <a href="https://www2.seas.gwu.edu/~simha/">Rahul Simha</a>, and <a href="https://benjamindwilliams.weebly.com">Ben Williams</a>.
+            </p>
+
+            <hr>
+
+            <div class="accordion" id="work">
+              <div class="card">
+                <!-- <button class="btn btn-link" > -->
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#current" href="#current" aria-expanded="true" aria-controls="current">
+                  <h5 class="mb-0">
+                      Current
+                  </h5>
+                </div>
+                <!-- </button> -->
+
+                <div id="current" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <ul class="list-inline list-docs">
+                    <li>
+                      <a>Sociocultural Bias in Face Recognition</a> &sdot; 2019
+                    </li>
+                    <li>
+                      <a href="docs/datamaster/proposal.pdf">The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation</a> &sdot; 2018
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#datasci" href="#datasci" aria-expanded="false" aria-controls="datasci">
+                  <h5 class="mb-0">
+                      Data Science
+                  </h5>
+                </div>
+
+                <div id="datasci" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <ul class="list-inline list-docs">
+                    <li>
+                      <a href="docs/research-days_2019.pdf">Evolution of Innovation in Patent Citation Networks</a> &sdot; 2019 <br> <i>2<sup>nd</sup> Prize, GW Research Days.</i>
+                    </li>
+                    <li>
+                      <a href="docs/religious-growth.pdf">Effect of Religious Diversity on Growth</a> &sdot; 2018
+                    </li>
+                    <li>
+                      <a href="docs/ml-document-classification.html">ML Document Classification</a> &sdot; 2018 <br> <i>Tech talk presented at GWU ACM.</i>
+                    </li>
+                    <li>
+                      <a href="docs/drag.pdf">The Derivative Relational Attribute Graph Model for Link Prediction</a> &sdot; 2017
+                    </li>
+                    <li>
+                      <a href="https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf">The Practice and Promise of Open Source Intelligence and Computational Security Studies</a> &sdot; 2017 <br> <i>Presented at International Studies Association South Annual Conference, Orlando.</i>
+                    </li>
+                    <li>
+                      <a href="docs/event-coding.pdf">A Deep Learning Approach for CAMEO Coding</a> &sdot; 2017  <br> <i>Presented at ISA South Conference, Orlando.</i>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+
+              <div class="card">
+                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#phil" href="#phil" aria-expanded="false" aria-controls="phil">
+                  <h5 class="mb-0">
+                      Philosophy
+                  </h5>
+                </div>
+
+                <div id="phil" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                  <ul class="list-inline list-docs">
+                    <li>
+                      <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
+                    </li>
+                    <li>
+                      <a href="docs/mill.pdf">Constructive Intolerance: A Critique of Laissez-Faire Liberalism</a> &sdot; 2018
+                    </li>
+                    <li>
+                      <a href="docs/stevens.pdf">Wallace Stevens' Emancipated Individual: A World of One's Own</a> &sdot; 2018
+                    </li>
+                    <li>
+                      <a href="docs/plato-popper.pdf">From Plato to Popper: Platonic Forms in Modern Science and Quantum Theory</a> &sdot; 2017
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+      <!-- /.container -->
+
+    </section>
 
     <section id="portfolio" class="content-section-a">
 
@@ -252,142 +392,6 @@
     </section>
     <!-- /.content-section-a -->
 
-    <section class="content-section-a" id="other-work">
-
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-9" style="margin: auto auto;">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">
-              Research
-            </h2>
-
-            <p class="lead">
-              Ryan's research interests span data-driven public policy, fairness and interpretability in AI, and philosophy of mind. He seeks to apply computing technology to social problems.
-            </p>
-
-            <a href="docs/steed-cv.pdf" class="btn btn-secondary btn-lg" style="margin: 0px auto 10px auto">
-              <i class="far fa-file-alt fa-fw"></i>
-              <span class="network-name">Curriculum Vitae</span>
-            </a>
-
-            <hr>
-
-            <div class="accordion" id="work">
-              <div class="card">
-                <!-- <button class="btn btn-link" > -->
-                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#current" href="#current" aria-expanded="true" aria-controls="current">
-                  <h5 class="mb-0">
-                      Current
-                  </h5>
-                </div>
-                <!-- </button> -->
-
-                <div id="current" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <ul class="list-inline list-docs">
-                    <li>
-                      <a>Sociocultural Bias in Machine Learning Image Classification</a> &sdot; 2018
-                    </li>
-                    <li>
-                      <a href="docs/datamaster/proposal.pdf">The Effects of Patent Filing Acceleration on the Evolution of Technological Innovation</a> &sdot; 2018
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#datasci" href="#datasci" aria-expanded="false" aria-controls="datasci">
-                  <h5 class="mb-0">
-                      Data Science
-                  </h5>
-                </div>
-
-                <div id="datasci" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <ul class="list-inline list-docs">
-                    <li>
-                      <a href="docs/research-days_2019.pdf">Evolution of Innovation in Patent Citation Networks</a> &sdot; 2019 <br> <i>2<sup>nd</sup> Prize, GW Research Days.</i>
-                    </li>
-                    <li>
-                      <a href="docs/religious-growth.pdf">Effect of Religious Diversity on Growth</a> &sdot; 2018
-                    </li>
-                    <li>
-                      <a href="docs/ml-document-classification.html">ML Document Classification</a> &sdot; 2018 <br> <i>Tech talk presented at GWU ACM.</i>
-                    </li>
-                    <li>
-                      <a href="docs/drag.pdf">The Derivative Relational Attribute Graph Model for Link Prediction</a> &sdot; 2017
-                    </li>
-                    <li>
-                      <a href="https://www.isanet.org/Portals/0/Media/Conferences/SouthOrlando2017/South%20Orlando%202017%20-%20Full%20Program.pdf">The Practice and Promise of Open Source Intelligence and Computational Security Studies</a> &sdot; 2017 <br> <i>Presented at International Studies Association South Annual Conference, Orlando.</i>
-                    </li>
-                    <li>
-                      <a href="docs/event-coding.pdf">A Deep Learning Approach for CAMEO Coding</a> &sdot; 2017  <br> <i>Presented at ISA South Conference, Orlando.</i>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-
-              <div class="card">
-                <div class="card-header" id="headingOne" data-toggle="collapse" data-target="#phil" href="#phil" aria-expanded="false" aria-controls="phil">
-                  <h5 class="mb-0">
-                      Philosophy
-                  </h5>
-                </div>
-
-                <div id="phil" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
-                  <ul class="list-inline list-docs">
-                    <li>
-                      <a href="docs/descartes-spinoza.pdf">Sufficient Reason and Infinite Regress: Causal Consistency in Descartes and Spinoza</a> &sdot; 2018
-                    </li>
-                    <li>
-                      <a href="docs/mill.pdf">Constructive Intolerance: A Critique of Laissez-Faire Liberalism</a> &sdot; 2018
-                    </li>
-                    <li>
-                      <a href="docs/stevens.pdf">Wallace Stevens' Emancipated Individual: A World of One's Own</a> &sdot; 2018
-                    </li>
-                    <li>
-                      <a href="docs/plato-popper.pdf">From Plato to Popper: Platonic Forms in Modern Science and Quantum Theory</a> &sdot; 2017
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-      <!-- /.container -->
-
-    </section>
-
-    <section class="content-section-b" id="about">
-
-      <div class="container">
-
-        <div class="row">
-          <div id="headshot-column" class="col-md-4 ml-auto">
-            <img class="img-fluid headshot" src="img/RyanSteed_Headshot.jpg" alt="">
-          </div>
-          <div class="col-lg-5 mr-auto order-lg-1">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">
-              About
-            </h2>
-            <p class="lead">
-              Ryan Steed is a data scientist, project manager, and student.
-              He is studying Computational Economics at The George Washington University after graduating from the North Carolina School of Science and Mathematics in 2017.
-              He is also a Technology Fellow and project manager at the <a target="_touch" href="http://gwic.io">Innovation Center</a>, George Washington's student startup incubator and innovation accelerator.
-            </p>
-          </div>
-        </div>
-
-      </div>
-      <!-- /.container -->
-
-    </section>
     <!-- /.content-section-b -->
 
     <aside class="banner">
@@ -437,7 +441,7 @@
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#portfolio">Portfolio</a>
+            <a href="#about">About</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
@@ -445,7 +449,7 @@
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#about">About</a>
+            <a href="#portfolio">Portfolio</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
