:arrow_upper_right: Updated social, new news section

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ title: Home
 
     {% include research.html %}
 
-    {% include portfolio.html %}
+    {% include news.html %}
 
-    {% include footer.html %}
+    {% include portfolio.html %}
 
   </body>
 
