--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ title: Home
 
     {% include news.html %}
 
-    {% include portfolio.html %}
+    <!-- {% include portfolio.html %} -->
 
   </body>
 
